--- a/jpsite-client/src/main/resources/application.properties
+++ b/jpsite-client/src/main/resources/application.properties
@@ -65,6 +65,7 @@ spring.security.user.password=1234
 jpsite.security.browser.loginPage=/login_in_qq.html
 jpsite.security.browser.loginType=JSON
 jpsite.security.browser.signUpUrl=/demo_sign_up.html
+jpsite.security.browser.signOutUrl=/login_out_success.html
 jpsite.security.code.image.width=200
 jpsite.security.code.image.height=20
 jpsite.security.code.image.url=/getMe
