--- a/jpsite-client/src/main/resources/application.properties
+++ b/jpsite-client/src/main/resources/application.properties
@@ -96,3 +96,12 @@ springext.cache.redis.topic=cache
 
 #mybatis-plus.config-location=/mybatis-config.xml
 #mybatis-plus.mapper-locations=classpath*:/mappers/**/*.xml
+
+security.oauth2.client.clientId = imooc
+security.oauth2.client.clientSecret = imoocsecret
+
+#jpsite.security.oauth2.clients[0].clientId = imooc
+#jpsite.security.oauth2.clients[0].clientSecret = imoocsecret
+#jpsite.security.oauth2.clients[0].accessTokenValidateSeconds = 3600
+#jpsite.security.oauth2.clients[1].clientId = test
+#jpsite.security.oauth2.clients[1].clientSecret = test
