--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>jpsite-parent</module>
         <module>jpsite-server</module>
         <module>jpsite-client</module>
+        <module>jpsite-security-app</module>
     </modules>
     <packaging>pom</packaging>
 
