--- a/jpsite-client/src/main/resources/application.properties
+++ b/jpsite-client/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.address=127.0.0.1
 server.servlet.context-path=/
 server.port=80
 server.servlet.session.timeout=3
-spring.session.timeout=10
+#----spring.session.timeout=1000
 ## beetlsql
 beetlsql.sqlPath=/sql
 beetlsql.nameConversion=org.beetl.sql.core.UnderlinedNameConversion
@@ -62,7 +62,7 @@ xxl.com.mty.jpsite.server.job.executor.logretentiondays=-1
 spring.security.user.name=user
 spring.security.user.password=1234
 ## 自定义登录页面
-jpsite.security.browser.loginPage=/login_in_qq.html
+jpsite.security.browser.loginPage=/login_in.html
 jpsite.security.browser.loginType=JSON
 jpsite.security.browser.signUpUrl=/demo_sign_up.html
 jpsite.security.browser.signOutUrl=/login_out_success.html
@@ -96,9 +96,6 @@ springext.cache.redis.topic=cache
 
 #mybatis-plus.config-location=/mybatis-config.xml
 #mybatis-plus.mapper-locations=classpath*:/mappers/**/*.xml
-
-security.oauth2.client.clientId = imooc
-security.oauth2.client.clientSecret = imoocsecret
 
 #jpsite.security.oauth2.clients[0].clientId = imooc
 #jpsite.security.oauth2.clients[0].clientSecret = imoocsecret
