--- a/jpsite-client/pom.xml
+++ b/jpsite-client/pom.xml
@@ -94,6 +94,11 @@
         </dependency>
         <dependency>
             <groupId>com.jls.springboot</groupId>
+            <artifactId>jpsite-security-app</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jls.springboot</groupId>
             <artifactId>jpsite-security-browser</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
