--- a/jpsite-security-app/pom.xml
+++ b/jpsite-security-app/pom.xml
@@ -10,6 +10,14 @@
     <packaging>jar</packaging>
     <name>jpsite-security-app</name>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>Finchley</spring-cloud.version>
+        <spring-boot-version>2.0.6.RELEASE</spring-boot-version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.jls.springboot</groupId>
@@ -41,6 +49,11 @@
                     <artifactId>spring-security-core</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>${spring-boot-version}</version>
         </dependency>
     </dependencies>
 
