--- a/jpsite-client/src/main/resources/application.properties
+++ b/jpsite-client/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## spring boot tomcat
 server.address=127.0.0.1
 server.servlet.context-path=/
-server.port=9090
+server.port=80
 server.servlet.session.timeout=3
 #----spring.session.timeout=1000
 ## beetlsql
@@ -62,7 +62,7 @@ xxl.com.mty.jpsite.server.job.executor.logretentiondays=-1
 spring.security.user.name=user
 spring.security.user.password=1234
 ## 自定义登录页面
-jpsite.security.browser.loginPage=/login_in.html
+jpsite.security.browser.loginPage=/login_in_qq.html
 jpsite.security.browser.loginType=JSON
 jpsite.security.browser.signUpUrl=/demo_sign_up.html
 jpsite.security.browser.signOutUrl=/login_out_success.html
