--- a/jpsite-client/pom.xml
+++ b/jpsite-client/pom.xml
@@ -85,7 +85,11 @@
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
             <version>${spring-boot-version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
         <!-- jpsite-security -->
         <dependency>
             <groupId>com.jls.springboot</groupId>
@@ -97,11 +101,11 @@
             <artifactId>jpsite-security-app</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>com.jls.springboot</groupId>
-            <artifactId>jpsite-security-browser</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.jls.springboot</groupId>-->
+            <!--<artifactId>jpsite-security-browser</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.jls.springboot</groupId>
             <artifactId>jpsite-security-social</artifactId>
