--- a/jpsite-security-social/pom.xml
+++ b/jpsite-security-social/pom.xml
@@ -23,11 +23,6 @@
             <artifactId>jpsite-security-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>com.jls.springboot</groupId>
-            <artifactId>jpsite-security-browser</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.social</groupId>
@@ -38,6 +33,11 @@
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-config</artifactId>
             <version>1.1.6.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jls.springboot</groupId>
+            <artifactId>jpsite-security-app</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.social</groupId>
@@ -61,6 +61,12 @@
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>3.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>2.0.6.RELEASE</version>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
