--- a/jpsite-client/src/main/resources/application.properties
+++ b/jpsite-client/src/main/resources/application.properties
@@ -93,12 +93,11 @@ spring.social.auto-connection-views=true
 zk.url=127.0.0.1:2181
 ## cache
 springext.cache.redis.topic=cache
-
 #mybatis-plus.config-location=/mybatis-config.xml
 #mybatis-plus.mapper-locations=classpath*:/mappers/**/*.xml
-
-#jpsite.security.oauth2.clients[0].clientId = imooc
-#jpsite.security.oauth2.clients[0].clientSecret = imoocsecret
-#jpsite.security.oauth2.clients[0].accessTokenValidateSeconds = 3600
-#jpsite.security.oauth2.clients[1].clientId = test
-#jpsite.security.oauth2.clients[1].clientSecret = test
+## security.oauth2
+jpsite.security.oauth2.clients[0].clientId=jpsite
+jpsite.security.oauth2.clients[0].clientSecret=jpsitesecret
+jpsite.security.oauth2.clients[0].accessTokenValidateSeconds=3600
+jpsite.security.oauth2.clients[1].clientId=test
+jpsite.security.oauth2.clients[1].clientSecret=test
