--- a/jpsite-client/src/main/resources/application.properties
+++ b/jpsite-client/src/main/resources/application.properties
@@ -101,3 +101,5 @@ jpsite.security.oauth2.clients[0].clientSecret=jpsitesecret
 jpsite.security.oauth2.clients[0].accessTokenValidateSeconds=3600
 jpsite.security.oauth2.clients[1].clientId=test
 jpsite.security.oauth2.clients[1].clientSecret=test
+
+jpsite.security.oauth2.jwtSigningKey=jpsite
