--- a/jpsite-client/pom.xml
+++ b/jpsite-client/pom.xml
@@ -96,16 +96,16 @@
             <artifactId>jpsite-security-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>com.jls.springboot</groupId>
-            <artifactId>jpsite-security-app</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
         <!--<dependency>-->
             <!--<groupId>com.jls.springboot</groupId>-->
-            <!--<artifactId>jpsite-security-browser</artifactId>-->
+            <!--<artifactId>jpsite-security-app</artifactId>-->
             <!--<version>1.0-SNAPSHOT</version>-->
         <!--</dependency>-->
+        <dependency>
+            <groupId>com.jls.springboot</groupId>
+            <artifactId>jpsite-security-browser</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.jls.springboot</groupId>
             <artifactId>jpsite-security-social</artifactId>
