--- a/jpsite-security-app/pom.xml
+++ b/jpsite-security-app/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>${spring-boot-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+            <version>1.0.9.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
