--- a/jpsite-client/src/main/resources/application.properties
+++ b/jpsite-client/src/main/resources/application.properties
@@ -9,13 +9,6 @@ server.servlet.context-path=/
 server.port=80
 server.servlet.session.timeout=3
 #----spring.session.timeout=1000
-## beetlsql
-beetlsql.sqlPath=/sql
-beetlsql.nameConversion=org.beetl.sql.core.UnderlinedNameConversion
-beetl-beetlsql.dev=true
-beetlsql.daoSuffix=Dao
-bettlsql.basePackage=com
-beetlsql.dbStyle=org.beetl.sql.core.db.MySqlStyle
 ## 启动自定义图案
 server.undertow.accesslog.enabled=true
 server.undertow.accesslog.dir=logs
@@ -63,8 +56,11 @@ spring.security.user.name=user
 spring.security.user.password=1234
 ## 自定义登录页面
 jpsite.security.browser.loginPage=/login_in_qq.html
-jpsite.security.browser.loginType=JSON
+# session失效提示页面
+jpsite.security.browser.session.sessionInvalidUrl=/login_in_qq.html
+jpsite.security.browser.loginResponseType=JSON
 jpsite.security.browser.signUpUrl=/demo_sign_up.html
+jpsite.security.browser.signInPage=/login_in_mobile.html
 jpsite.security.browser.signOutUrl=/login_out_success.html
 jpsite.security.code.image.width=200
 jpsite.security.code.image.height=20
