--- a/jpsite-security-core/pom.xml
+++ b/jpsite-security-core/pom.xml
@@ -40,7 +40,12 @@
             <artifactId>spring-social-security</artifactId>
             <version>1.1.6.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.2</version>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
