--- a/jpsite-security-browser/pom.xml
+++ b/jpsite-security-browser/pom.xml
@@ -31,12 +31,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.0.6.RELEASE</version>
         </dependency>
-        <!--<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <version>2.0.6.RELEASE</version>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.2</version>
             <optional>true</optional>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
