--- a/jpsite-client/src/main/resources/application.properties
+++ b/jpsite-client/src/main/resources/application.properties
@@ -7,8 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.address=127.0.0.1
 server.servlet.context-path=/
 server.port=80
-server.servlet.session.timeout=3
-#----spring.session.timeout=1000
+server.servlet.session.timeout=30m
 ## 启动自定义图案
 server.undertow.accesslog.enabled=true
 server.undertow.accesslog.dir=logs
