--- a/jpsite-client/src/main/resources/application.properties
+++ b/jpsite-client/src/main/resources/application.properties
@@ -18,7 +18,7 @@ jpsite.apollo.enable=false
 jpsite.xxl.job.enable=false
 jpsite.zookeeper.enable=false
 jpsite.redis.enable=false
-jpsite.autoSignUp.enable=false
+jpsite.autoSignUp.enable=true
 ## mongodb
 #----spring.data.mongodb.uri=mongodb://127.0.0.1:27017/baike
 ## redis
