--- a/jpsite-server/pom.xml
+++ b/jpsite-server/pom.xml
@@ -85,6 +85,12 @@
             <artifactId>spring-beans</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.0.4.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
