--- a/jpsite-client/src/main/resources/application.properties
+++ b/jpsite-client/src/main/resources/application.properties
@@ -61,7 +61,7 @@ jpsite.swagger.title=jpsite-swagger-api
 jpsite.security.social.qq.app-id=101530498
 jpsite.security.social.qq.app-secret=6273806fa4fad0b221261860be6455ce
 jpsite.security.social.filterProcessesUrl=/qqLogin
-jpsite.security.social.qq.providerId=qq
+jpsite.security.social.qq.providerId=callback.do
 jpsite.security.social.weixin.app-id=wxd99431bbff8305a0
 jpsite.security.social.weixin.app-secret=60f78681d063590a469f1b297feff3c4
 spring.social.auto-connection-views=true
