退出，绑定和解除绑定

--- a/jpsite-client/src/main/resources/application.properties
+++ b/jpsite-client/src/main/resources/application.properties
@@ -41,7 +41,7 @@ jpsite.security.browser.session.sessionInvalidUrl=/login_in_qq.html
 jpsite.security.browser.loginResponseType=JSON
 jpsite.security.browser.signUpUrl=/demo_sign_up.html
 jpsite.security.browser.signInPage=/login_in_mobile.html
-jpsite.security.browser.signOutUrl=/login_out_success.html
+jpsite.security.browser.signOutUrl=/signOut
 jpsite.security.code.image.width=200
 jpsite.security.code.image.height=20
 jpsite.security.code.image.url=/getMe
