--- a/jpsite-client/src/main/resources/application.properties
+++ b/jpsite-client/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jp_admin?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jp_site?useUnicode=true&characterEncoding=UTF-8
 #spring.datasource.url=jdbc:mysql://${MYSQL_PORT_3306_TCP_ADDR:MYSQL_PORT_3306_TCP_PORT}/jp_admin?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
