--- a/jpsite-security-social/pom.xml
+++ b/jpsite-security-social/pom.xml
@@ -20,6 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>com.jls.springboot</groupId>
+            <artifactId>jpsite-server</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jls.springboot</groupId>
             <artifactId>jpsite-security-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
@@ -28,7 +33,10 @@
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-security</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-config</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
