--- a/jpsite-security-core/pom.xml
+++ b/jpsite-security-core/pom.xml
@@ -8,14 +8,13 @@
         <groupId>com.jls.springboot</groupId>
         <artifactId>jpsite-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath></relativePath>
+        <!--<relativePath/>设定一个空值将始终从仓库中获取，不从本地路径获取-->
+        <relativePath>../jpsite-parent/pom.xml</relativePath>
     </parent>
 
-    <groupId>com.jls.springboot</groupId>
     <artifactId>jpsite-security-core</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
     <name>jpsite-security-core</name>
 
     <dependencies>
