--- a/jpsite-security-browser/pom.xml
+++ b/jpsite-security-browser/pom.xml
@@ -8,10 +8,9 @@
         <groupId>com.jls.springboot</groupId>
         <artifactId>jpsite-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath></relativePath>
+        <relativePath>../jpsite-parent/pom.xml</relativePath>
     </parent>
-    
-    <groupId>com.jls.springboot</groupId>
+
     <artifactId>jpsite-security-browser</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
